cholera 0.7.9.9018
==================

- add latlong.road.segments, latlong.ortho.proj and latlong.ortho.proj.pump.


cholera 0.7.9.9017
==================

- add latlongFrame() and related functions.
- update latlongSnowMap().


cholera 0.7.9.9016
==================

- add rectangleFilter().
- replace ortho.rect with rectangle.filter.
- archive orthogonalRectangle() and related functions.


cholera 0.7.9.9015
==================

- archive latitudeLongitude*() functions.


cholera 0.7.9.9014
==================

- use latlongAddress() and latlongRoadSegments() in latlongOrthoProj().
- use latlongRoadSegments() in latlongOrthoProjPumps().
- use latlongRoadSegments() in latlongEmbed().
- use amended latlongEmbed() in latlongNeighborhoodData().


cholera 0.7.9.9013
==================

- use partitionRoads() in latlongRoads().
- match and append lat-long for duplicated "roads" points.
- archive partitionRoadEndpoints() and related functions.


cholera 0.7.9.9012
==================

- add amended segmentDistance() auxilliary function.
- use segmentDistance() in latlongRoadSegments().
- amend latlongPumps() TIFF file names.
- temporarily export segmentDistance().


cholera 0.7.9.9011
==================

- use latlongRoads() in latlongRoadSegments().


cholera 0.7.9.9010
==================

- archive latlongCoordinates() and latlongCoordinatesB().
- rename latlongCoordinatesC() to latlongCoordinates().


cholera 0.7.9.9009
==================

- add roadPointDistance().
- add thresholdRoadGraph().
- add pointOverlapRoad().
- add openRoadTriads().
- add partitionRoads().


cholera 0.7.9.9008
==================

- add partitionStringGraph().
- add thresholdAddressGraph().
- add openTriads().
- add starGraph().
- rename partitionStringGraph() to partitionEvenString().
- add partitionOddString().
- add partitionAddresses().
- add latlongAddress().


cholera 0.7.9.9007
==================

- add pointOverlap().


cholera 0.7.9.9006
==================

- add roadHighlight().

