@@ -1,0 +1,26 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/data.R
+\docType{data}
+\name{latlong.ortho.proj.pump.vestry}
+\alias{latlong.ortho.proj.pump.vestry}
+\title{Orthogonal projection of georeferenced 14 pumps from Vestry report.}
+\format{
+A data frame with 5 variables that records the position of the orthogonal projection of the 14 pumps onto the network of roads.
+ \describe{
+    \item{\code{road.segment}}{"address" road segment}
+    \item{\code{lon.proj}}{longitude}
+    \item{\code{lat.proj}}{latitude}
+    \item{\code{ortho.dist}}{orthogonal distance to home road segment}
+    \item{\code{pump}}{numeric ID}
+ }
+}
+\usage{
+latlong.ortho.proj.pump.vestry
+}
+\description{
+Orthogonal projection of georeferenced 14 pumps from Vestry report.
+}
+\note{
+\code{\link{pumpData}} documents the code for these data.
+}
+\keyword{datasets}
