@@ -2,6 +2,7 @@ cholera 0.7.9.9018
 ==================
 
 - add latlong.road.segments, latlong.ortho.proj and latlong.ortho.proj.pump.
+- add latlong.ortho.proj.pump.vestry.
 
 
 cholera 0.7.9.9017
